--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     }
      var onSuccess = function(position) {
         alert('Latitude: '          + position.coords.latitude          + '     '  +
-              'Longitude: '         + position.coords.longitude         + '     ' +
+              'Longitude: '         + position.coords.longitude         + '     ' );
         
     };
  function onError(error) {
